--- a/hugo.toml
+++ b/hugo.toml
@@ -14,7 +14,7 @@ paginate = 5
 [params]
 mode="auto" # color-mode → light,dark,toggle or auto
 useCDN=false # don't use CDNs for fonts and icons, instead serve them locally.
-subtitle = "Damilola's Blog"
+# subtitle = ""
 mathjax = true # enable MathJax support
 katex = true # enable KaTeX support
 
